[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Buttontheme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/buttonreal.png" type="Texture" id=3]
[ext_resource path="res://Assets/BG large.png" type="Texture" id=4]
[ext_resource path="res://Assets/LilyPads/lilypad.png" type="Texture" id=5]

[node name="MainMenu" type="Node2D"]
position = Vector2( 451, 243 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 701, 297 )
scale = Vector2( 5.8172, 5.8172 )
texture = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = -452.0
margin_top = -284.0
margin_right = 1469.0
margin_bottom = 795.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 660.0
margin_top = 144.0
margin_right = 1260.0
margin_bottom = 934.0
custom_constants/separation = 50

[node name="BtnStart" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 160.0
rect_min_size = Vector2( 600, 160 )
theme = ExtResource( 2 )
text = "Start"

[node name="Sprite" type="Sprite" parent="CenterContainer/VBoxContainer/BtnStart"]
show_behind_parent = true
position = Vector2( 299, 81 )
scale = Vector2( 2.66772, 2.66772 )
texture = ExtResource( 3 )

[node name="BtnAquarium" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 600.0
margin_bottom = 370.0
rect_min_size = Vector2( 600, 160 )
theme = ExtResource( 2 )
text = "Aquarium"

[node name="Sprite2" type="Sprite" parent="CenterContainer/VBoxContainer/BtnAquarium"]
show_behind_parent = true
position = Vector2( 299, 81 )
scale = Vector2( 2.66772, 2.66772 )
texture = ExtResource( 3 )

[node name="BtnOptions" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 420.0
margin_right = 600.0
margin_bottom = 580.0
rect_min_size = Vector2( 600, 160 )
theme = ExtResource( 2 )
text = "Credits"

[node name="Sprite4" type="Sprite" parent="CenterContainer/VBoxContainer/BtnOptions"]
show_behind_parent = true
position = Vector2( 299, 81 )
scale = Vector2( 2.66772, 2.66772 )
texture = ExtResource( 3 )

[node name="BtnQuit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 630.0
margin_right = 600.0
margin_bottom = 790.0
rect_min_size = Vector2( 600, 160 )
theme = ExtResource( 2 )
text = "Quit"

[node name="Sprite3" type="Sprite" parent="CenterContainer/VBoxContainer/BtnQuit"]
show_behind_parent = true
position = Vector2( 299, 80.9999 )
scale = Vector2( 2.66772, 2.66772 )
texture = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 509, 297 )

[node name="Lilypad" type="Sprite" parent="."]
position = Vector2( 60, 385 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
offset = Vector2( -25, 113.5 )

[node name="Lilypad2" type="Sprite" parent="."]
position = Vector2( 1063, 20 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="Lilypad4" type="Sprite" parent="."]
position = Vector2( -244, -88 )
rotation = -1.5708
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="Lilypad3" type="Sprite" parent="."]
position = Vector2( 1113, 671 )
rotation = -3.14159
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )

[connection signal="pressed" from="CenterContainer/VBoxContainer/BtnStart" to="." method="_on_BtnStart_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BtnAquarium" to="." method="_on_BtnAquarium_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BtnOptions" to="." method="_on_BtnOptions_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BtnQuit" to="." method="_on_BtnQuit_pressed"]
